--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ julia:
   - 0.3
   - 0.3.10
 after_success:
-  - julia -e "Pkg.add(\"Coverage\"); cd(Pkg.dir(\"${JL_PKG}\")); using Coverage; result=process_folder(); println(\"CODECOV submiting\"); Codecov.submit(result); println(\"COVERALLS submiting\"); Coveralls.submit(result);"
+  - julia -e "Pkg.add(\"Coverage\"); cd(Pkg.dir(\"${JL_PKG}\")); using Coverage; result=process_folder(); println(\"====== CODECOV submiting ======\"); Codecov.submit(result); println(\"====== COVERALLS submiting ======\"); Coveralls.submit(result);"
